--- a/supabase-vue-3/package.json
+++ b/supabase-vue-3/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.24.0",
     "dotenv": "^16.1.3",
-    "pinia": "^2.0.36",
+    "pinia": "^2.0.0-rc.10",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
